eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 406635120035.dkr.ecr.ca-central-1.amazonaws.com/simplebank:8bca4a3abb14f8b9ffef0561c9900935516635a1
        ports:
        - containerPort: 8080
